@@ -1,26 +1,25 @@
-package Blockchain::Ethereum::Transaction::EIP1559;
+package Blockchain::Ethereum::Transaction::EIP2930;
 
 use v5.26;
 use strict;
 use warnings;
 
-# ABSTRACT: Ethereum Fee Market transaction abstraction (EIP-1559)
+# ABSTRACT: Ethereum Access List transaction abstraction (EIP-2930)
 # AUTHORITY
 # VERSION
 
 =head1 SYNOPSIS
 
-Transaction abstraction for EIP-1559 Fee Market transactions
+Transaction abstraction for EIP-2930 Access List transactions
 
-    my $transaction = Blockchain::Ethereum::Transaction::EIP1559->new(
-        nonce                    => '0x0',
-        max_fee_per_gas          => '0x9',
-        max_priority_fee_per_gas => '0x0',
-        gas_limit                => '0x1DE2B9',
-        to                       => '0x3535353535353535353535353535353535353535'
-        value                    => '0xDE0B6B3A7640000',
-        data                     => '0x',
-        chain_id                 => '0x539',
+    my $transaction = Blockchain::Ethereum::Transaction::EIP2930->new(
+        nonce       => '0x0',
+        gas_price   => '0x4A817C800',
+        gas_limit   => '0x5208',
+        to          => '0x3535353535353535353535353535353535353535',
+        value       => '0xDE0B6B3A7640000',
+        data        => '0x',
+        chain_id    => '0x1',
         access_list => [
             {
                 address      => '0x1234567890123456789012345678901234567890',
@@ -45,28 +44,23 @@ Transaction abstraction for EIP-1559 Fee Market transactions
 
 use parent 'Blockchain::Ethereum::Transaction';
 
-use constant TRANSACTION_PREFIX => pack("H*", '02');
+use constant TRANSACTION_PREFIX => pack("H*", '01');
 
 sub new {
     my ($class, %args) = @_;
 
     my $self = $class->SUPER::new(%args);
 
-    foreach (qw( max_priority_fee_per_gas max_fee_per_gas access_list )) {
+    foreach (qw( gas_price access_list )) {
         $self->{$_} = $args{$_} if exists $args{$_};
     }
 
     bless $self, $class;
     return $self;
-
 }
 
-sub max_priority_fee_per_gas {
-    return shift->{max_priority_fee_per_gas};
-}
-
-sub max_fee_per_gas {
-    return shift->{max_fee_per_gas};
+sub gas_price {
+    return shift->{gas_price};
 }
 
 sub access_list {
@@ -88,24 +82,15 @@ Returns the RLP encoded transaction bytes
 sub serialize {
     my $self = shift;
 
-    my @params = (
-        $self->chain_id,    #
-        $self->nonce,
-        $self->max_priority_fee_per_gas,
-        $self->max_fee_per_gas,
-        $self->gas_limit,
-        $self->to,
-        $self->value,
-        $self->data,
-        $self->_encode_access_list,
-    );
+    my @params =
+        ($self->chain_id, $self->nonce, $self->gas_price, $self->gas_limit, $self->to, $self->value, $self->data, $self->_encode_access_list,);
 
     @params = $self->_equalize_params(\@params)->@*;
 
     push(@params, $self->v, $self->r, $self->s)
         if $self->v && $self->r && $self->s;
 
-    # eip-1559 transactions must be prefixed by 2 that is the
+    # eip-2930 transactions must be prefixed by 1 that is the
     # transaction type
     return TRANSACTION_PREFIX . $self->rlp->encode(\@params);
 }
