@@ -9,17 +9,13 @@ use Blockchain::Ethereum::ABI::Encoder;
 my $encoder = Blockchain::Ethereum::ABI::Encoder->new();
 
 subtest "Array" => sub {
-    eval {
-        $encoder->append('uint[1]' => [1, 2, 3, 4])->encode
-    };
+    eval { $encoder->append('uint[1]' => [1, 2, 3, 4])->encode };
     like $@, qr/Invalid array size, signature \d+, data: \d+/, 'die correctly for invalid array size';
     $encoder->_clean;
 };
 
 subtest "Type" => sub {
-    eval {
-        $encoder->append(undef => [])->encode
-    };
+    eval { $encoder->append(undef => [])->encode };
     like $@, qr/Module not found for the given parameter signature/, 'die correctly for invalid signature';
     $encoder->_clean;
 };
@@ -39,12 +35,11 @@ subtest "Numeric" => sub {
     $encoder->_clean;
 
     eval { $encoder->append(bool => 2)->encode };
-    like $@, qr/Invalid bool data it must be 1 or 0 but given/,
-        'die correctly for invalid bool value';
+    like $@, qr/Invalid bool data it must be 1 or 0 but given/, 'die correctly for invalid bool value';
     $encoder->_clean;
 
     eval { $encoder->append(uint32 => '3452432985703298457239498237458932')->encode };
-    like 
+    like
         $@,
         qr/Invalid data length, signature: \d+, data length: \d+/,
         'die correctly invailid length numeric';
